@@ -1,3 +1,7 @@
+2019-11-20 Magnus Hagdorn
+ * piccolo3/common/PiccoloSpectra.py: handle time zone correctly when creating
+   spectrum
+
 2019-11-17 Magnus Hagdorn
  * piccolo3/common/PiccoloSpectra.py: add method to extract dark pixels
 
